// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > li 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "text",
                  "value": "inline ",
                },
                {
                  "attributes": {},
                  "children": [],
                  "data": {
                    "hName": "component",
                    "hProperties": {},
                  },
                  "fmAttributes": {},
                  "name": "component",
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 1,
                      "offset": 19,
                    },
                    "start": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                  },
                  "type": "textComponent",
                },
              ],
              "position": {
                "end": {
                  "column": 20,
                  "line": 1,
                  "offset": 19,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 2,
                      "offset": 29,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 22,
                    },
                  },
                  "type": "text",
                  "value": "inline ",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 25,
                          "line": 2,
                          "offset": 44,
                        },
                        "start": {
                          "column": 21,
                          "line": 2,
                          "offset": 40,
                        },
                      },
                      "type": "text",
                      "value": "text",
                    },
                  ],
                  "data": {
                    "hName": "component",
                    "hProperties": {},
                  },
                  "fmAttributes": {},
                  "name": "component",
                  "position": {
                    "end": {
                      "column": 26,
                      "line": 2,
                      "offset": 45,
                    },
                    "start": {
                      "column": 10,
                      "line": 2,
                      "offset": 29,
                    },
                  },
                  "type": "textComponent",
                },
              ],
              "position": {
                "end": {
                  "column": 26,
                  "line": 2,
                  "offset": 45,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 22,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 26,
              "line": 2,
              "offset": 45,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 20,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 26,
          "line": 2,
          "offset": 45,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 26,
      "line": 2,
      "offset": 45,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic > link 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "target": "_blank",
          },
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "link",
            },
          ],
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "title": null,
          "type": "link",
          "url": "https://nuxtjs.org",
        },
      ],
      "position": {
        "end": {
          "column": 44,
          "line": 1,
          "offset": 43,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 44,
      "line": 1,
      "offset": 43,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic > remarkPluginName 1`] = `
{
  "children": [],
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic > simple 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "paragraph 1",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "position": {
        "end": {
          "column": 4,
          "line": 3,
          "offset": 16,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 13,
        },
      },
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 5,
              "offset": 29,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 18,
            },
          },
          "type": "text",
          "value": "paragraph 2",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 5,
          "offset": 29,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 18,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 12,
      "line": 5,
      "offset": 29,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
